--- a/app/partials/directives/newsfeed.html
+++ b/app/partials/directives/newsfeed.html
@@ -78,22 +78,22 @@
 <div class="newsfeed">
 	<div class="item" ng-class="getNewsItemStyleClass(item)" ng-repeat='item in data.news'>
         <div>
-            <img class="image" src="img/Twitter.png" ng-if="feedType == 'TWITTER'">
+            <img ng-if="feedType == 'TWITTER'" src="img/Twitter.png" height="32" title="Tweet">
+            <img ng-show="options.showTranslation && item.isTranslated" src="img/Translated.png" height="12" title="Showing Translation">
             <span ng-class="{true: 'vertical-align', false: ''}[feedType == 'TWITTER']">
-                <span class="head" ng-if="item.head != undefined" ng-bind="item.head" ng-show="!options.showTranslation"></span>
-                <span class="head" ng-if="item.headTranslated != undefined" ng-bind="item.headTranslated" ng-show="options.showTranslation" title="{{item.head}}"></span>
-                <span class="name" ng-if="item.name != undefined" ng-bind="item.name" ng-show="!options.showTranslation"></span>
-                <span class="name" ng-if="item.nameTranslated != undefined" ng-bind="item.nameTranslated" ng-show="options.showTranslation" title="{{item.name}}"></span>
+                <span class="head" ng-if="item.head != undefined" ng-show="!options.showTranslation" ng-bind="item.head"></span>
+                <span class="head" ng-if="item.headTranslated != undefined" ng-show="options.showTranslation" ng-bind="item.headTranslated" title="{{item.head}}"></span>
+                <span class="name" ng-if="item.name != undefined" ng-show="!options.showTranslation" ng-bind="item.name"></span>
+                <span class="name" ng-if="item.nameTranslated != undefined" ng-show="options.showTranslation" ng-bind="item.nameTranslated" title="{{item.name}}"></span>
                 <links-popup-button key="" source="" tooltip="{{item.head}} or {{item.name}}" json="{{item.linksPopupButtonJson}}" disable="{{item.linksPopupButtonDisabled}}"></links-popup-button>
-                <span class="glyphicon glyphicon-comment" ng-show="options.showTranslation && item.isTranslated" title="Translated"></span>
             </span>
         </div>
         <div>
             <span class="date" ng-bind="item.date.toUTCString()"></span>
         </div>
         <div>
-            <span class="text" ng-bind="item.text" ng-show="!options.showTranslation"></span>
-            <span class="text" ng-bind="item.textTranslated" ng-show="options.showTranslation" title="{{item.text}}"></span>
+            <span class="text" ng-show="!options.showTranslation" ng-bind="item.text"></span>
+            <span class="text" ng-show="options.showTranslation" ng-bind="item.textTranslated" title="{{item.text}}"></span>
         </div>
 	</div>
 </div>
