--- a/app/css/variables-dark-purple.less
+++ b/app/css/variables-dark-purple.less
@@ -29,8 +29,7 @@
 @callout: #FEF59C;
 
 // Text colors to contrast well against accent colored backgrounds.
-@accent-dulled-text-color: #000000;
-
+@accent-dulled-text-color: #0B0D0D;
 @main-text-color: #85949C;
 @light-text-color: #FFFFFF;
 @mid-text-color: darken(@main-text-color, 10%);
