--- a/app/partials/directives/queryResultsTable.html
+++ b/app/partials/directives/queryResultsTable.html
@@ -1,7 +1,13 @@
-<div class="header-container" ng-show="!(hideHeader)">
-    <div class="title header-text pull-left" ng-bind="(bindTitle != undefined) ? bindTitle : options.table.prettyName"></div>
+<div class="header-container">
+    <div ng-show="!(hideHeader)" class="title header-text pull-left" ng-bind="(bindTitle != undefined) ? bindTitle : options.table.prettyName"></div>
 
-    <options-menu parent-element="element" export-function="makeQueryResultsTableExportObject">
+    <div class="table-counts">
+        Showing
+        <span class="showing-number" ng-bind="tableOptions.data.length | number"></span> of
+        <span class="total-number" ng-bind="totalRows | number"></span>
+    </div>
+
+    <options-menu ng-show="!(hideHeader)" parent-element="element" export-function="makeQueryResultsTableExportObject">
         <div class="form-group" ng-show="!(hideAdvancedOptions)">
             <label>Database</label>
             <select class="form-control" ng-model="options.database" ng-options="database.prettyName for database in databases" ng-required="true" ng-disabled="(databases.length < 2)" ng-change="updateTables()">
@@ -23,7 +29,7 @@
                     <button class="btn btn-default" ng-click="addColumn()" ng-disabled="!(deletedFieldsMap[options.database.name][options.table.name].length > 0)">&plus;</button>
                 </div>
             </div>
-        </div>    
+        </div>
 
         <div class="form-group">
             <label>Sort By</label>
@@ -40,7 +46,7 @@
                     </label>
                 </div>
             </div>
-        </div>    
+        </div>
 
         <div class="form-group">
             <label>Limit</label>
@@ -54,15 +60,6 @@
             </div>
         </div>
     </options-menu>
-</div>
-
-<div class="clearfix"></div>
-
-<div class="header-container filter-container">
-    <h4 class="pull-left">Showing 
-        <span class="count text-primary" ng-bind="tableOptions.data.length | number"></span> of 
-        <span ng-bind="totalRows | number"></span>
-    </h4>
 </div>
 
 <div class="clearfix"></div>
