NEON-1690 Cleaning up styling in style.less and timeline

--- a/app/css/directives/barchart.less
+++ b/app/css/directives/barchart.less
@@ -102,15 +102,7 @@
         .y {
             &.axis {
                 text{
-                    text-shadow:
-                        1px 1px 0 @text-shadow-color,
-                        1px 0px 0 @text-shadow-color,
-                        1px -1px 0 @text-shadow-color,
-                        -1px 1px 0 @text-shadow-color,
-                        -1px 0px 0 @text-shadow-color,
-                        -1px -1px 0 @text-shadow-color,
-                        0px 2px 0 @text-shadow-color,
-                        0px -2px 0 @text-shadow-color;
+                    text-shadow: @visualization-label-shadow;
                     font-weight: bold;
                     fill: @mid-text-color;
                 }
