--- a/app/css/directives/countBy.less
+++ b/app/css/directives/countBy.less
@@ -83,7 +83,7 @@
 
         .slick-header-column{
             color: @mid-text-color;
-            background: @main-background-darken;
+            background: @main-background;
             cursor: pointer;
 
             &.ui-state-hover{
