--- a/app/css/variables-light-green.less
+++ b/app/css/variables-light-green.less
@@ -70,3 +70,11 @@
 @dark-map-background: #242424;
 
 @powered-by-neon-image: url('../img/Neon_60x34.png');
+@timeline-label-shadow: 1px 1px 0 @text-shadow-color,
+    1px 0px 0 @text-shadow-color,
+    1px -1px 0 @text-shadow-color,
+    -1px 1px 0 @text-shadow-color,
+    -1px 0px 0 @text-shadow-color,
+    -1px -1px 0 @text-shadow-color,
+    0px 2px 0 @text-shadow-color,
+    0px -2px 0 @text-shadow-color;
