--- a/app/css/app.less
+++ b/app/css/app.less
@@ -15,16 +15,6 @@
 
 @import 'variables-dark-purple.less';
 
-html {
-    color: @main-text-color;
-
-    .navbar-default {
-        .navbar-text {
-            color: @main-text-color;
-        }
-    }
-}
-
 .dropdown-menu {
     background-color: @visualization-box-background;
     color: @main-text-color;
@@ -53,9 +43,136 @@ html {
     }
 }
 
-.no-margin {
-    margin-left: 0px !important;
-    margin-right: 0px !important;
+.navbar {
+    margin-bottom: 0;
+
+    .navbar-default{
+        background-color: @visualization-box-background;
+        border: 0;
+        box-shadow: 0 1px 2px @shadow;
+        z-index: auto;
+        top: 0;
+        width: 100%;
+        z-index: 1040;
+        //Disable transform used in Bootstrap 3.2.0 Affix plugin.  This hides any modals that are defined
+        // inside the nav and breaks the database-overlay .
+        transform: none;
+        -webkit-transform: none;
+
+        .file-format-btn-group {
+            padding: 5px 40px;
+        }
+
+        .navbar-nav {
+            float: left;
+            margin: 0;
+
+            > li {
+                float: left;
+
+                > a{
+                    margin-right: 40px;
+                    color: @accent-bright;
+                    border-bottom: 2px solid @accent-bright;
+                    padding: 15px 0 13px;
+
+                    @media (max-width: 767px) {
+                        margin-right: 30px;
+                    }
+
+                    &.collapsed, &.collapsed:focus{
+                        background: none;
+                        color: @main-text-color;
+                        border: 0;
+                        padding-bottom: 15px;
+                    }
+
+                    &:focus, &:hover, &.collapsed:hover{
+                        color: @accent-bright;
+                    }
+                }
+            }
+
+            > .dropdown {
+                > .primary{
+                    border: 0;
+                    background-color: @accent-bright;
+                    color: @light-text-color;
+                    padding: 15px 30px;
+                    font-weight: bold;
+
+                    &:hover, &:focus{
+                        background-color: @accent-dark;
+                        color: @light-text-color;
+                    }
+                }
+            }
+
+            .open {
+                .dropdown-menu {
+                    @media (max-width: 767px) {
+                        position: absolute;
+                        float: left;
+                        width: auto;
+                        margin: 2px 0 0;
+                        background-color: @light-background;
+                        border: @main-border;
+                        border: @shadow-border;
+                        -webkit-box-shadow: 0 6px 12px @shadow;
+                        box-shadow: 0 6px 12px @shadow;
+                    }
+                }
+            }
+        }
+    }
+
+    .navbar-option-menu {
+        .chart-options {
+            .popover {
+                min-width: 200px;
+            }
+        }
+    }
+
+    .navbar-title-text {
+        margin-top: 15px;
+        margin-bottom: 15px;
+        font-weight: bold;
+    }
+
+    .navbar-text{
+        margin: 8px;
+        font-weight: 300;
+        color: @main-text-color;
+
+        @media (max-width: 767px) {
+            display: none;
+        }
+
+        &.options {
+            &:hover {
+                color: @accent-bright;
+            }
+        }
+
+        img{
+            margin-left: 5px;
+            margin-right: 5px;
+        }
+
+        .caret {
+            margin-left: 5px;
+            margin-right: 5px;
+        }
+    }
+
+    .open {
+        .navbar-text {
+            &.options {
+                color: @accent-bright;
+            }
+        }
+    }
 }
 
 .options {
