--- a/app/css/variables-dark-purple.less
+++ b/app/css/variables-dark-purple.less
@@ -1,5 +1,5 @@
 //
-// Copyright 2014 Next Century Corporation
+// Copyright 2015 Next Century Corporation
 // Licensed under the Apache License, Version 2.0 (the "License");
 // you may not use this file except in compliance with the License.
 // You may obtain a copy of the License at
@@ -14,26 +14,21 @@
 //
 
 @main-background: #0B0D0D;
-@main-background-lighten: lighten(@main-background, 4%);
-@main-background-darken: darken(@main-background, 6%);
-@light-background: #C9CFD1;
-@mid-background: #314551;
 @visualization-box-background: #1B313D;
+@mid-background: #314551;
+@light-background: #C9CFD1;
 
-// General accent colors to highlight areas of tables or visualizations
 @accent-bright: #A654A1;
-@accent-light: #B585B4;
 @accent-dark: #854683;
 @accent-dulled: #CEB3CE;
+@accent-light: #B585B4;
 @accent-lightest: #E0D5E0;
 @callout: #FEF59C;
 
-// Text colors to contrast well against accent colored backgrounds.
 @accent-dulled-text-color: #0B0D0D;
 @main-text-color: #85949C;
+@mid-text-color: #C9CFD1;
 @light-text-color: #FFFFFF;
-@mid-text-color: darken(@main-text-color, 10%);
-
 
 @error-text-color: #AA1E13;
 @error-color: #C2360D;
@@ -49,8 +44,19 @@
 @visualization-border-radius: @border-radius;
 @shadow-border: 1px solid #FFFFFF;
 
-@button-border-color: #787878;
-@button-color: #E0D5E0;
+/** buttons **/
+@button-color: @light-text-color;
+@button-border: 1px solid @accent-bright;
+@button-background-color: @accent-bright;
+@button-hover-color: @light-text-color;
+@button-hover-background-color: @accent-dark;
+@button-hover-border: 1px solid @accent-dark;
+@button-active-color: @light-text-color;
+@button-active-background-color: @accent-dark;
+@button-active-border: 1px solid @accent-dark;
+
+
+
 
 @chart-text-color: @main-text-color;
 @chart-axis-color: @main-text-color;
@@ -72,3 +78,4 @@
 @dark-map-background: #242424;
 
 @powered-by-neon-image: url('../img/Neon_Logo_Gray.svg');
+@visualization-label-shadow: none;
