--- a/app/css/directives/filterBuilder.less
+++ b/app/css/directives/filterBuilder.less
@@ -54,12 +54,6 @@
             width: 100%;
         }
 
-        label {
-            overflow: hidden;
-            text-overflow: ellipsis;
-            white-space: nowrap;
-        }
-
         select {
             width: 100%;
         }
@@ -77,7 +71,7 @@
             button {
                 padding: 6px;
                 overflow-x: hidden;
-                text-overflow: ellipsis;
+                //text-overflow: ellipsis;
                 white-space: nowrap;
             }
 
@@ -104,6 +98,10 @@
         label {
             margin: 0px 2px;
             height: 15px;
+            color: @main-text-color;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
         }
     }
 }
