NEON-1690 cleaning up dark green theme

--- a/app/css/app.less
+++ b/app/css/app.less
@@ -13,7 +13,7 @@
 // limitations under the License.
 //
 
-@import 'variables-dark-purple.less';
+@import 'variables-dark-green.less';
 
 .dropdown-menu {
     background-color: @visualization-box-background;
