--- a/app/css/directives/map.less
+++ b/app/css/directives/map.less
@@ -214,15 +214,18 @@
                 background: transparent;
 
                 a {
-                    background-color: @accent-bright;
-                    opacity: .7;
+                    background-color: @button-background-color;
+                    color: @button-color;
+                    border: @button-border;
+                    border-radius: @border-radius;
                     font-size: 20px;
                     font-family: "Open Sans", Helvetica, arial, sans-serif;
                     line-height: 24px;
 
                     &:hover{
-                        background-color: @accent-bright;
-                        opacity: 1;
+                        background-color: @button-hover-background-color;
+                        color: @button-hover-color;
+                        border: @button-hover-border;
                     }
                 }
             }
