--- a/app/css/variables-dark-green.less
+++ b/app/css/variables-dark-green.less
@@ -14,41 +14,49 @@
 //
 
 @main-background: #0B0D0D;
-@main-background-lighten: lighten(@main-background, 4%);
-@main-background-darken: darken(@main-background, 6%);
-@light-background: #1B313D;
-@mid-background: #314551;
 @visualization-box-background: #1B313D;
+@mid-background: #314551;
+@light-background: #1B313D;
 
-// General accent colors to highlight areas of tables or visualizations
 @accent-bright: #39B54A;
-@accent-light: #7C398E;
-@accent-dark: #82F9F3E;
+@accent-dark: #2F9F3E;
 @accent-dulled: #88D292;
+@accent-light: #7CE98E;
 @accent-lightest: #E0D5E0;
 @callout: goldenrod;
 
-// Text colors to contrast well against accent colored backgrounds.
 @accent-dulled-text-color: #000000;
-
 @main-text-color: #85949C;
-@light-text-color: #FFFFFF;
 @mid-text-color: darken(@main-text-color, 10%);
-
+@light-text-color: #FFFFFF;
 
 @error-text-color: #AA1E13;
 @error-color: #C2360D;
 @error-dark-color: #AA1E13;
 
 
-@border-color: #CCCCCC;
-@shadow: rgba(0, 0, 0, 0.2);
+@border-color: #FFFFFF;
+@border-radius: 2px;
+@shadow: ;
 @text-shadow-color: #FFFFFF;
-@border: 0px solid @border-color;
-@shadow-border: 0px solid @shadow;
+@main-border: 1px solid @border-color;
+@visualization-border: 0px solid @border-color;
+@visualization-border-radius: @border-radius;
+@shadow-border: 1px solid #FFFFFF;
 
-@button-border-color: #787878;
-@button-color: #E0D5E0;
+/** buttons **/
+@button-color: @light-text-color;
+@button-border: 1px solid @accent-bright;
+@button-background-color: @accent-bright;
+@button-hover-color: @light-text-color;
+@button-hover-background-color: @accent-dark;
+@button-hover-border: 1px solid @accent-dark;
+@button-active-color: @light-text-color;
+@button-active-background-color: @accent-dark;
+@button-active-border: 1px solid @accent-dark;
+
+
+
 
 @chart-text-color: @main-text-color;
 @chart-axis-color: @main-text-color;
@@ -69,4 +77,5 @@
 @light-map-background: #CDD2D4;
 @dark-map-background: #242424;
 
-@powered-by-neon-image: url('../img/Neon_60x34.png');
+@powered-by-neon-image: url('../img/Neon_Logo_Gray.svg');
+@visualization-label-shadow: none;
