Fix bounding box position on map layer again

--- a/app/css/directives/map.less
+++ b/app/css/directives/map.less
@@ -266,6 +266,11 @@
             pointer-events: none;
         }
     }
+
+    [id^="OpenLayers_Layer_Boxes_"] {
+        z-index: 745 !important;
+        pointer-events: none;
+    }
 }
 
 .visualization-widget-mobile {
