--- a/app/partials/directives/barchart.html
+++ b/app/partials/directives/barchart.html
@@ -39,7 +39,7 @@
     <div class="legend">
 
         <div class="header-item filter-reset pull-right" ng-class="{true: 'hidden', false: ''}[filterSet === undefined]" title="{{filterSet.key}}={{filterSet.value}}">
-            <links-popup-button key="{{filterSet.value}}" source="{{visualizationId}}" tooltip="{{filterSet.value}}"></links-popup-button>
+            <links-popup-button key="{{filterSet.value}}" source="{{visualizationId}}" tooltip="{{filterSet.value}}" is-disabled="{{linksPopupButtonIsDisabled}}"></links-popup-button>
             <span class="filter-label" ng-bind="filterSet.value"></span>
             <span class="glyphicon glyphicon-remove" ng-click="clearFilterSet()"></span>
         </div>
