--- a/app/css/variables-dark-green.less
+++ b/app/css/variables-dark-green.less
@@ -23,7 +23,7 @@
 @accent-dulled: #88D292;
 @accent-light: #7CE98E;
 @accent-lightest: #E0D5E0;
-@callout: goldenrod;
+@callout: #DAA520;
 
 @accent-dulled-text-color: #000000;
 @main-text-color: #85949C;
