--- a/app/partials/directives/countby.html
+++ b/app/partials/directives/countby.html
@@ -59,7 +59,7 @@
 
     <div class="header-item filter-reset pull-right" ng-class="{true: 'hidden', false: ''}[filterSet === undefined]" title="{{filterSet.key}}={{filterSet.value}}">
         <span class="filter-label" ng-bind="filterSet.value"></span>
-        <span class="glyphicon glyphicon-remove" ng-click="clearFilter()"></span>
+        <span class="border-left glyphicon glyphicon-remove" ng-click="clearFilter()"></span>
     </div>
 </div>
 
