--- a/app/css/variables-dark-green.less
+++ b/app/css/variables-dark-green.less
@@ -77,5 +77,22 @@
 @light-map-background: #CDD2D4;
 @dark-map-background: #242424;
 
-@powered-by-neon-image: url('../img/Neon_Logo_Gray.svg');
+@powered-by-neon-image: url('../img/Neon_60x34.png');
 @visualization-label-shadow: none;
+
+@barChartIcon: url('../img/visualizations/BarChart64.png');
+@countIcon: url('../img/visualizations/Count64.png');
+@createFilterIcon: url('../img/visualizations/CreateFilter64.png');
+@ganttIcon: url('../img/visualizations/Gantt64.png');
+@graphIcon: url('../img/visualizations/Graph64.png');
+@lineChartIcon: url('../img/visualizations/LineChart64.png');
+@mapIcon: url('../img/visualizations/Map64.png');
+@newsIcon: url('../img/visualizations/News64.png');
+@opsIcon: url('../img/visualizations/OPS64.png');
+@opsClockIcon: url('../img/visualizations/OpsClock64.png');
+@pieChartIcon: url('../img/visualizations/PieChart64.png');
+@sunburstIcon: url('../img/visualizations/Sunburst64.png');
+@tagCloudIcon: url('../img/visualizations/TagCloud64.png');
+@timelineIcon: url('../img/visualizations/Timeline64.png');
+@viewDataIcon: url('../img/visualizations/ViewData64.png');
+@neonIcon: @powered-by-neon-image;
