--- a/app/css/variables-light-green.less
+++ b/app/css/variables-light-green.less
@@ -23,7 +23,7 @@
 @accent-dulled: #88D292;
 @accent-light: #7CE98E;
 @accent-lightest: #E0D5E0;
-@callout: #FEF59C;
+@callout: #DAA520;
 
 @accent-dulled-text-color: #000000;
 @main-text-color: #777777;
@@ -81,3 +81,20 @@
     -1px -1px 0 @text-shadow-color,
     0px 2px 0 @text-shadow-color,
     0px -2px 0 @text-shadow-color;
+
+@barChartIcon: url('../img/visualizations/BarChart64.png');
+@countIcon: url('../img/visualizations/Count64.png');
+@createFilterIcon: url('../img/visualizations/CreateFilter64.png');
+@ganttIcon: url('../img/visualizations/Gantt64.png');
+@graphIcon: url('../img/visualizations/Graph64.png');
+@lineChartIcon: url('../img/visualizations/LineChart64.png');
+@mapIcon: url('../img/visualizations/Map64.png');
+@newsIcon: url('../img/visualizations/News64.png');
+@opsIcon: url('../img/visualizations/OPS64.png');
+@opsClockIcon: url('../img/visualizations/OpsClock64.png');
+@pieChartIcon: url('../img/visualizations/PieChart64.png');
+@sunburstIcon: url('../img/visualizations/Sunburst64.png');
+@tagCloudIcon: url('../img/visualizations/TagCloud64.png');
+@timelineIcon: url('../img/visualizations/Timeline64.png');
+@viewDataIcon: url('../img/visualizations/ViewData64.png');
+@neonIcon: @powered-by-neon-image;
