--- a/app/css/directives/sunburst.less
+++ b/app/css/directives/sunburst.less
@@ -43,6 +43,17 @@
         margin: 0px 5px 5px 0px;
         width: auto;
     }
+
+    .no-data {
+        color: @main-text-color;
+        font-weight: bold;
+        margin-top: 10px;
+
+        button {
+            display: block;
+            margin-top: 10px;
+        }
+    }
 }
 
 .sunburst-controls  {
