--- a/app/partials/directives/countby.html
+++ b/app/partials/directives/countby.html
@@ -1,5 +1,5 @@
 <div class="header-container" ng-show="!(hideHeader)">
-    <div class="title header-text pull-left" ng-bind="(bindTitle != undefined) ? bindTitle : options.table.prettyName + ' / ' + options.field.prettyName"></div>
+    <div class="title header-text pull-left" ng-bind="(bindTitle != undefined) ? bindTitle : options.table.prettyName + (options.field.prettyName ? ' / ' + options.field.prettyName : '')"></div>
 
     <options-menu parent-element="element" export-function="makeCountByExportObject" button-text="optionsMenuButtonText" show-button-text="showOptionsMenuButtonText">
         <div class="form-group" ng-show="!(hideAdvancedOptions)">
