--- a/app/partials/directives/directedGraph.html
+++ b/app/partials/directives/directedGraph.html
@@ -1,5 +1,5 @@
 <div class="header-container" ng-show="!(hideHeader)">
-    <div class="title header-text pull-left" ng-bind="(bindTitle != undefined) ? bindTitle : options.table.prettyName + ' / ' + options.selectedNodeField.prettyName"></div>
+    <div class="title header-text pull-left" ng-bind="(bindTitle != undefined) ? bindTitle : options.table.prettyName + (options.selectedNodeField.prettyName ? ' / ' + options.selectedNodeField.prettyName : '')"></div>
 
     <options-menu parent-element="element" button-text="optionsMenuButtonText" show-button-text="showOptionsMenuButtonText" export-function="makeDirectedGraphExportObject">
         <div class="form-group" ng-show="!(hideAdvancedOptions)">
