--- a/app/partials/directives/timelineSelector.html
+++ b/app/partials/directives/timelineSelector.html
@@ -1,5 +1,5 @@
 <div class="header-container" ng-show="!(hideHeader)">
-    <div class="title header-text pull-left" ng-bind="(bindTitle != undefined) ? bindTitle : options.table.prettyName + ' / ' + options.dateField.prettyName"></div>
+    <div class="title header-text pull-left" ng-bind="(bindTitle != undefined) ? bindTitle : options.table.prettyName + (options.dateField.prettyName ? ' / ' + options.dateField.prettyName : '')"></div>
 
     <h4 class="next-to-title pull-left">
         <span class="count text-primary" ng-bind="recordCount | number"></span>
