--- a/app/partials/directives/map.html
+++ b/app/partials/directives/map.html
@@ -164,26 +164,39 @@
                 <div ng-drag="true" ng-drag-data="layer">
                     <div class="form-group layer-options-well neon-well neon-well-dark">
                         <div class="layer-options-row">
-                            <div class="btn-group layer-options-col layer-options-col-wide">
-                                <label class="btn btn-default" ng-cancel-drag ng-class="{true: 'active', false: ''}[layer.visible === true]" title="Toggle Layer Visibility">
+                            <div class="btn-group layer-options-col layer-options-col-wide" ng-if="!hideAdvancedOptions">
+                                <label class="btn btn-default" ng-cancel-drag ng-class="{true: 'active', false: ''}[layer.visible === true]" title="{{'Layer Visibility ' + (layer.visible ? 'On' : 'Off')}}">
                                     <input type="checkbox" style="display:none" ng-model="layer.visible" ng-change="updateLayerVisibility(layer)">
                                     <span class="glyphicon glyphicon-eye-open"></span>
                                 </label>
-                                <label class="btn btn-default" ng-cancel-drag ng-class="{true: 'active', false: ''}[layer.active === true]" title="Toggle Map Filtering on Layer">
+                                <label class="btn btn-default" ng-cancel-drag ng-class="{true: 'active', false: ''}[layer.active === true]" title="{{'Layer Filtering ' + (layer.visible ? 'On' : 'Off')}}">
                                     <input type="checkbox" style="display:none" ng-model="layer.active" ng-change="updateFilteringOnLayer(layer)">
                                     <span class="glyphicon glyphicon-filter"></span>
                                 </label>
-                                <label class="btn btn-default" ng-cancel-drag title="Edit Layer" ng-show="!(layer.editing)">
+                                <label class="btn btn-default" ng-cancel-drag title="Edit Layer" ng-show="!layer.editing">
                                     <input type="button" style="display:none" ng-click="toggleEditing(layer)">
                                     <span class="glyphicon glyphicon-edit"></span>
                                 </label>
-                                <label class="btn btn-default" ng-cancel-drag ng-class="{true: '', false: 'disabled'}[layer.valid]" title="Save Layer" ng-show="(layer.editing)">
+                                <label class="btn btn-default" ng-cancel-drag ng-class="{true: '', false: 'disabled'}[layer.valid]" title="Save Layer" ng-show="layer.editing">
                                     <input type="button" style="display:none" ng-click="updateLayer(layer)">
                                     <span class="glyphicon glyphicon-ok"></span>
                                 </label>
                                 <label class="btn btn-danger" ng-cancel-drag title="Delete Layer">
                                     <input type="button" style="display:none" ng-click="deleteLayer(layer)">
                                     <span class="glyphicon glyphicon-trash"></span>
+                                </label>
+                            </div>
+
+                            <div class="btn-group layer-options-col layer-options-col-wide" ng-if="hideAdvancedOptions">
+                                <label class="btn btn-default" ng-cancel-drag ng-class="{true: 'active', false: ''}[layer.visible === true]" style="width: 50%;" title="{{'Layer Visibility ' + (layer.visible ? 'On' : 'Off')}}">
+                                    <input type="checkbox" style="display:none" ng-model="layer.visible" ng-change="updateLayerVisibility(layer)">
+                                    <span class="glyphicon glyphicon-eye-open"></span>
+                                    Visible
+                                </label>
+                                <label class="btn btn-default" ng-cancel-drag ng-class="{true: 'active', false: ''}[layer.active === true]" style="width: 50%;" title="{{'Layer Filtering ' + (layer.active ? 'On' : 'Off')}}">
+                                    <input type="checkbox" style="display:none" ng-model="layer.active" ng-change="updateFilteringOnLayer(layer)">
+                                    <span class="glyphicon glyphicon-filter"></span>
+                                    Filter
                                 </label>
                             </div>
 
